Sun Jul 27 13:25:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: update version
	* src/odbc/odbc.c:
	- small merge (statistics functions) from Steve patch
	- some fixes for Sybase

Fri Jul 25 16:11:29 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/t0014.c nicer user feedback

Fri Jul 25 17:30:29 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix t0003 test (without broking other tests)

Thu Jul 24 23:04:03 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/params.c:
	- fixed portability in sql code

Thu Jul 24 14:27:31 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c:
	- fix problem with 2 SQLPrepare on same statement

Thu Jul 24 12:37:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/params.c(added) src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am:
	- added ODBC test for parameters

Thu Jul 24 11:37:47 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/write.c: small optimization and fix

Wed Jul 23 14:31:27 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/write.c src/tds/unittests/t0004.c
	- fix tds_put_string to handle > 128 character inputs.  

Tue Jul 22 12:56:18 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html: other small updates

Mon Jul 21 17:33:09 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/tds.html fixed up the introduction

Mon Jul 21 11:54:40 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/tds.html src/tds/query.c:
	- updated and fixed some RPC issues

Mon Jul 21 10:49:58 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO: add a TODO from ML
	* src/tds/query.c: comments

Sat Jul 19 21:37:28 EDT 2003
	* src/tds/login.c src/tds/read.c src/tds/write.c
	- include sys/select.h, patch from Pablo Gutierrez

Sat Jul 19 19:37:22 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* configure.in test for _vbprintf and _bprintf (for QNX)
	